# nanochatter

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
dev/: benchmark_mlx_reference.py  benchmark_mps_scaling.py  benchmark_persistent_worker.py  benchmark_swift_vs_python.py  compare_checkpoint_pytorch_mlx_translation.py  compare_pytorch_mlx_translation.py  export_mlx_safetensors.py  mlx_checkpoint_translation.py  mlx_compile_utils.py  mlx_compiled_training_probe.py  mlx_gpt_prototype.py  mlx_input_batches.py  mlx_logging.py  mlx_training_check.py  mlx_training_session.py  profile_mps_reference.py
docs/: APPLE_NATIVE_ACCELERATION_BASELINE_BENCHMARK.md  APPLE_NATIVE_ACCELERATION_HANDOFF.md  APPLE_NATIVE_ACCELERATION_MACHINE_PROFILE.md  APPLE_NATIVE_ACCELERATION_PLAN_2026-03.md  APPLE_NATIVE_ACCELERATION_RESEARCH_2026-03.md  APPLE_SILICON_PORTABILITY.md  CODE_REVIEW_2026-03-21.md  CODE_REVIEW_IMPLEMENTATION_TASKS_2026-03.md  CODE_REVIEW_RECOMMENDATIONS_2026-03.md  LEADERBOARD.md  M2_ULTRA_SCALING.md  PLANNING.md  README.md
nanochat/: checkpoint_manager.py  common.py  dataset.py  engine.py  optim.py  report.py  swift_build.py  swift_stub_engine.py  tokenizer.py
nanochat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
runs/: phase3_candidate_checks.sh  phase3_candidate_session.sh  phase3_quick_bench.sh  phase4a_bench_manifest.sh  phase4a_d4_bench.sh  phase4a_export_reference.sh  runcpu.sh  runm2ultra.sh  runm2ultra_base32.sh
scripts/: base_train.py  chat_cli.py  chat_sft.py  chat_web.py  mlx_swift_stub.py
tests/: conftest.py  test_attention_fallback.py  test_chat_web_validation.py  test_common_mps_memory.py  test_engine.py  test_mlx_compile_utils.py  test_mlx_input_batches.py  test_packaging_workflow.py  test_report.py  test_runtime_boundaries.py  test_swift_stub_engine.py
(+28 files in other folders)
